fix padding bottom overflow.

--- a/theme-saweicore/styles/_context.styl
+++ b/theme-saweicore/styles/_context.styl
@@ -52,7 +52,6 @@ img
   p > img
     display block
     text-align center
-    padding-bottom 26.66%
 
   img
     margin 0 auto
